@@ -1,5 +1,7 @@
 17 July 2007
 
+* Trailing newlines are now stripped from message_id tag (as they used to
+  be). This makes any existing caches by message-id useless.
 * Use SO_RCVTIMEO to apply configured timeout when connecting to SSL servers
   (SSL_connect must block as the easiest way to ensure the certificate is
   received before checking its validity).
@@ -467,4 +469,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.116 2007-07-17 18:31:07 nicm Exp $
+$Id: CHANGES,v 1.117 2007-07-17 21:45:27 nicm Exp $
